--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.2",
   "private": true,
   "devDependencies": {
-    
+    "gulp": "^3.8.10",
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-ruby-sass": "^1.0.0-alpha"
   }
 }
